# shaw_402

./: .gitignore  Anchor.toml  PITCH.md  README.md  TESTING_REPORT.md  UNIFIED_ARCHITECTURE_PROPOSAL.md  ecosystem.config.cjs  env.example  package-lock.json  package.json  test-solana-pay.mjs  test-usdc-payment.mjs
docs/: AFFILIATE_PLATFORM.md  AGENT_SYSTEM.md  CURRENT_WORKFLOW_ANALYSIS.md  DYNAMIC_YIELD_SYSTEM.md  MERCHANT_CANCELLATION.md  MVP_DEMO_GUIDE.md  PAYMENT_VAULT_INTEGRATION.md  README.md  SOLANA_PAY_INTEGRATION.md  USDC_SETTLEMENT.md  VAULT_ECONOMIC_MODEL.md  ZK_PRIVACY_ARCHITECTURE.md
programs/: README.md
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
public/: dashboard.html  index.html
simulations/: SIMULATION_RESULTS.md  vault-system-simulation.ts
src/agent/: agent-manager.ts  index.ts  payment-processor.ts
src/facilitator/: index.ts
src/lib/: affiliate-database.ts  get-server-config.ts  solana-utils.ts  vault-manager.ts  vault-program-client.ts  x402-middleware.ts  zk-privacy.ts
src/routes/: agent-api.ts  execute-split.ts  index.ts  merchant.ts  settle-usdc-split.ts  solana-pay.ts  vault-api.ts  vault-dashboard-api.ts
src/server/: index.ts
src/types/: circomlibjs.d.ts
