[package]
name = "shaw-vault"
version = "0.1.0"
description = "Shaw 402 Merchant Deposit Vault with Staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shaw_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
